Refactor JS nodes as HTML tags for cleaner code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <button class="choice" value="rock">Rock</button>
+      <button class="choice" value="paper">Paper</button>
+      <button class="choice" value="scissors">Scissors</button>
+    </div>
+    <div id="result">Results appear here.</div>
+    <div id="score"></div>
   </body>
 </html>
