Create a function to keep score

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       <button class="choice" value="scissors">Scissors</button>
     </div>
     <div id="result">Results appear here.</div>
-    <div id="score"></div>
+    <div id="score">
+      <div class="blocks" id="#player-block">
+        <span>Player Score: </span><span id="player-score">0</span>
+      </div>
+      <div class="blocks" id="#computer-block">
+        <span>Computer Score: </span><span id="computer-score">0</span>
+      </div>
+    </div>
   </body>
 </html>
