--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <span>Computer Score: </span><span id="computer-score">0</span>
       </div>
     </div>
+    <div id="final-result"></div>
   </body>
 </html>
