Add reload game functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Can you win a first-to-five battle?</p>
     <button class="start-game">START GAME</button>
     <div class="game off">
-      <div id="result">Results appear here.</div>
+      <div id="result"><span>Results appear here.</span></div>
       <div id="score">
         <div class="blocks" id="#player-block">
           <span><i class="fa-solid fa-user"></i> </span
@@ -44,6 +44,9 @@
         </button>
         <button class="choice" value="scissors">
           <i class="fa-solid fa-hand-scissors"></i>
+        </button>
+        <button class="reload off">
+          <i class="fa-solid fa-rotate-right"></i>
         </button>
       </div>
     </div>
