Toggle header display on game startup

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <title>Rock-Paper-Scissors</title>
   </head>
   <body>
-    <h1>Rock Paper Scissors</h1>
-    <h2>against the machine!</h2>
-    <p>Can you win a first-to-five battle?</p>
+    <div class="title">
+      <h1>Rock Paper Scissors</h1>
+      <h2>against the machine!</h2>
+      <p>Can you win a first-to-five battle?</p>
+    </div>
     <button class="start-game">START GAME</button>
     <div class="game off">
       <div id="score">
