Add non-functional PC choice buttons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
         </button>
       </div>
       <div id="result"><span>Results appear here.</span></div>
+      <div id="container">
+        <div class="pc-choice">
+          <i class="fa-solid fa-hand-back-fist"></i>
+        </div>
+        <div class="pc-choice">
+          <i class="fa-solid fa-hand"></i>
+        </div>
+        <div class="pc-choice">
+          <i class="fa-solid fa-hand-scissors"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
