Update HTML with pc choice IDs

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       </div>
       <div id="result"><span>Results appear here.</span></div>
       <div id="container">
-        <div class="pc-choice">
+        <div class="pc-choice" id="pc-rock">
           <i class="fa-solid fa-hand-back-fist"></i>
         </div>
-        <div class="pc-choice">
+        <div class="pc-choice" id="pc-paper">
           <i class="fa-solid fa-hand"></i>
         </div>
-        <div class="pc-choice">
+        <div class="pc-choice" id="pc-scissors">
           <i class="fa-solid fa-hand-scissors"></i>
         </div>
       </div>
