--- a/index.html
+++ b/index.html
@@ -63,5 +63,15 @@
         </div>
       </div>
     </div>
+    <div class="signature">
+      <p>Made by Atanas Nikolov</p>
+      <p>
+        Code:
+        <a href="https://github.com/a-hr-nikolov/rock-paper-scissors"
+          ><span><i class="fa-brands fa-github"></i> </span
+          >Rock-Paper-Scissors</a
+        >
+      </p>
+    </div>
   </body>
 </html>
