Edit signature to target blank

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
       <p>Made by Atanas Nikolov</p>
       <p>
         Code:
-        <a href="https://github.com/a-hr-nikolov/rock-paper-scissors"
+        <a
+          target="_blank"
+          href="https://github.com/a-hr-nikolov/rock-paper-scissors"
           ><span><i class="fa-brands fa-github"></i> </span
           >Rock-Paper-Scissors</a
         >
