--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon" />
     <script src="./js/script.js" defer></script>
     <title>Rock-Paper-Scissors</title>
   </head>
